--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="header__wrapper">
                 <div class="header__logo">
-                    <img src="./img/newlogo 1.png" alt="logo">
+                    <img src="./img/newlogo1.png" alt="logo">
                 </div>
                 <div class="header__connection">
                     <div class="headerConnection__imgLink headerConnection__block">
@@ -47,7 +47,7 @@
                             <img src="./img/mobile.png" alt="">
                         </div>
                     </div>
-                    <div class="headerConnection__block">
+                    <div class="headerConnection__block headerConnection__block--phone">
                         <a class="headerConnectionItem__link" href="#">+91 967 3466 023</a>
                     </div>
                 </div>
@@ -171,14 +171,14 @@
             </div>
         </section>
 
-        </div>
+        
     </main>
 
     <footer class="footer">
         <div class="container">
             <div class="header__wrapper">
                 <div class="header__logo">
-                    <img src="./img/newlogo 1.png" alt="logo">
+                    <img src="./img/newlogo1.png" alt="logo">
                 </div>
                 <div class="header__connection">
                     <div class="headerConnection__imgLink headerConnection__block">
