--- a/bouquet.html
+++ b/bouquet.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="header__wrapper">
                 <div class="header__logo">
-                    <img src="./img/newlogo 1.png" alt="logo">
+                    <img src="./img/newlogo1.png" alt="logo">
                 </div>
                 <div class="header__connection">
                     <div class="headerConnection__imgLink headerConnection__block">
@@ -26,7 +26,7 @@
                             <img src="./img/mobile.png" alt="">
                         </div>
                     </div>
-                    <div class="headerConnection__block">
+                    <div class="headerConnection__block headerConnection__block--phone">
                         <a class="headerConnectionItem__link" href="#">+91 967 3466 023</a>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
     <div class="container">
         <div class="header__wrapper">
             <div class="header__logo">
-                <img src="./img/newlogo 1.png" alt="logo">
+                <img src="./img/newlogo1.png" alt="logo">
             </div>
             <div class="header__connection">
                 <div class="headerConnection__imgLink headerConnection__block">
