--- a/bouquet.html
+++ b/bouquet.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,93 +8,103 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/bouquets/bouquet1.css">
 </head>
-<body>
-    <header class="header">
-        <div class="container">
-            <div class="header__wrapper">
-                <div class="header__logo">
-                    <img src="./img/newlogo1.png" alt="logo">
-                </div>
-                <div class="header__connection">
-                    <div class="headerConnection__imgLink headerConnection__block">
-                        <div class="headerConnection__item">
-                            <img src="./img/telegram.png" alt="">
-                        </div>
-                        <div class="headerConnection__item">
-                            <img src="./img/whatsapp.png" alt="">
-                        </div>
-                        <div class="headerConnection__item">
-                            <img src="./img/mobile.png" alt="">
-                        </div>
+
+<body class="body__bouquet">
+    <div class="wrapper">
+        <header class="header">
+            <div class="container">
+                <div class="header__wrapper">
+                    <div class="header__logo">
+                        <img src="./img/newlogo1.png" alt="logo">
                     </div>
-                    <div class="headerConnection__block headerConnection__block--phone">
-                        <a class="headerConnectionItem__link" href="#">+91 967 3466 023</a>
+                    <div class="header__connection">
+                        <div class="headerConnection__imgLink headerConnection__block">
+                            <div class="headerConnection__item">
+                                <img src="./img/telegram.png" alt="">
+                            </div>
+                            <div class="headerConnection__item">
+                                <img src="./img/whatsapp.png" alt="">
+                            </div>
+                            <div class="headerConnection__item">
+                                <img src="./img/mobile.png" alt="">
+                            </div>
+                        </div>
+                        <div class="headerConnection__block headerConnection__block--phone">
+                            <a class="headerConnectionItem__link" href="#">+91 967 3466 023</a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </header>
+        </header>
 
-<section class="saleCard">
-    <div class="container">
-        <div class="card">
-            <div class="card__block card__photo">
-                <div class="card__photo--big">
+        <section class="saleCard">
+            <div class="container">
+                <div class="card">
+                    <div class="card__block card__photo">
+                        <div class="card__photo--big">
 
+                        </div>
+                        <div class="card__photo--small">
+                            <div class="img">
+                                <img src="./img/baqet.jpeg" alt="">
+                            </div>
+                            <div class="img">
+                                <img src="./img/bouquet.jpg" alt="">
+                            </div>
+                            <div class="img">
+                                <img src="./img/buket-7-ranunkulyusov-277x277.jpeg" alt="">
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="card__block">
+                        <h1 class="card__block--title">Букет с цветами</h1>
+                        <div class="card__block--price">7000 р</div>
+                        <button class="btn-reset card__block--btn">click here</button>
+                        <div class="card__block--text">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae consequatur amet
+                            sapiente accusamus nobis, sequi expedita nulla accusantium ipsam impedit quaerat libero
+                            ullam pariatur, perferendis, sed maxime cumque dolore quas.
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae consequatur amet
+                            sapiente accusamus nobis, sequi expedita nulla accusantium ipsam impedit quaerat libero
+                            ullam pariatur, perferendis, sed maxime cumque dolore quas.
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae consequatur amet
+                            sapiente accusamus nobis, sequi expedita nulla accusantium ipsam impedit quaerat libero
+                            ullam pariatur, perferendis, sed maxime cumque dolore quas.
+                        </div>
+
+                    </div>
                 </div>
-                <div class="card__photo--small">
-                    <div class="img">
-                        <img src="./img/baqet.jpeg" alt="">
-                    </div>
-                    <div class="img">
-                        <img src="./img/bouquet.jpg" alt="">
-                    </div>
-                    <div class="img">
-                        <img src="./img/buket-7-ranunkulyusov-277x277.jpeg" alt="">
-                    </div>
-                </div>
-
             </div>
-            <div class="card__block">
-                <h1 class="card__block--title">Букет с цветами</h1>
-                <div class="card__block--price">7000 р</div>
-                <button class="btn-reset card__block--btn">click here</button>
-                <div class="card__block--text">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae consequatur amet sapiente accusamus nobis, sequi expedita nulla accusantium ipsam impedit quaerat libero ullam pariatur, perferendis, sed maxime cumque dolore quas.
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae consequatur amet sapiente accusamus nobis, sequi expedita nulla accusantium ipsam impedit quaerat libero ullam pariatur, perferendis, sed maxime cumque dolore quas.
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae consequatur amet sapiente accusamus nobis, sequi expedita nulla accusantium ipsam impedit quaerat libero ullam pariatur, perferendis, sed maxime cumque dolore quas.
+        </section>
+
+        <footer class="footer">
+            <div class="container">
+                <div class="header__wrapper">
+                    <div class="header__logo">
+                        <img src="./img/newlogo1.png" alt="logo">
+                    </div>
+                    <div class="header__connection">
+                        <div class="headerConnection__imgLink headerConnection__block">
+                            <div class="headerConnection__item">
+                                <img src="./img/telegram.png" alt="">
+                            </div>
+                            <div class="headerConnection__item">
+                                <img src="./img/whatsapp.png" alt="">
+                            </div>
+                            <div class="headerConnection__item">
+                                <img src="./img/mobile.png" alt="">
+                            </div>
+                        </div>
+                        <div class="headerConnection__block">
+                            <a class="headerConnectionItem__link" href="#">+91 967 3466 023</a>
+                        </div>
+                    </div>
                 </div>
-                
             </div>
-        </div>
+        </footer>
     </div>
-</section>
-
-<footer class="footer">
-    <div class="container">
-        <div class="header__wrapper">
-            <div class="header__logo">
-                <img src="./img/newlogo1.png" alt="logo">
-            </div>
-            <div class="header__connection">
-                <div class="headerConnection__imgLink headerConnection__block">
-                    <div class="headerConnection__item">
-                        <img src="./img/telegram.png" alt="">
-                    </div>
-                    <div class="headerConnection__item">
-                        <img src="./img/whatsapp.png" alt="">
-                    </div>
-                    <div class="headerConnection__item">
-                        <img src="./img/mobile.png" alt="">
-                    </div>
-                </div>
-                <div class="headerConnection__block">
-                    <a class="headerConnectionItem__link" href="#">+91 967 3466 023</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
     <script src="./js/script.js"></script>
 </body>
+
 </html>
