--- a/index.html
+++ b/index.html
@@ -48,19 +48,35 @@
                         <div class="header__connection">
                             <div class="headerConnection__imgLink headerConnection__block">
 
-                                <a href="https://t.me/mopasaran" target="blank">
+                                <a class="headerConnection__link" href="https://t.me/mopasaran" target="blank">
                                     <div class="headerConnection__item">
-                                        <img src="./img/telegram.png" alt="">
+                                        <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path class="svg__change" d="M16 32C24.8365 32 32 24.8365 32 16C32 7.16344 24.8365 0 16 0C7.16344 0 0 7.16344 0 16C0 24.8365 7.16344 32 16 32Z" fill="#61C0BF"/>
+                                            <path d="M6.65876 15.8613L17.4333 11.422C18.4969 10.9595 22.1038 9.47976 22.1038 9.47976C22.1038 9.47976 23.7686 8.83236 23.6298 10.4046C23.5835 11.052 23.2137 13.3179 22.8437 15.7688L21.6877 23.0289C21.6877 23.0289 21.5951 24.0925 20.809 24.2775C20.0229 24.4624 18.7281 23.63 18.4969 23.4451C18.3119 23.3064 15.0287 21.2255 13.8263 20.2081C13.5026 19.9307 13.1327 19.3757 13.8726 18.7283C15.5374 17.2023 17.5258 15.3064 18.7281 14.104C19.283 13.5492 19.8379 12.2543 17.5258 13.8265L11.0056 18.2196C11.0056 18.2196 10.2657 18.6821 8.8784 18.2659C7.49112 17.8497 5.87262 17.2948 5.87262 17.2948C5.87262 17.2948 4.7628 16.6012 6.65876 15.8613Z" fill="white"/>
+                                            </svg>
                                     </div>
                                 </a>
-                                <a href="https://wa.me/79215750006" target="blank">
+                                <a class="headerConnection__link" href="https://wa.me/79215750006" target="blank">
                                     <div class="headerConnection__item">
-                                        <img src="./img/whatsapp.png" alt="">
+                                        <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path class="svg__change" fill-rule="evenodd" clip-rule="evenodd" d="M16.0161 32C24.8439 32 32 24.8365 32 16C32 7.16344 24.8439 0 16.0161 0C7.18851 0 0.0322868 7.16344 0.0322868 16C0.0322868 18.8512 0.777344 21.5283 2.08321 23.8468L0 31.3943L6.49652 28.854C9.15573 30.8307 12.4495 32 16.0161 32Z" fill="#61C0BF"/>
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M12.0867 8.68613C11.7923 8.03367 11.4822 8.02061 11.2021 8.00919C10.9729 7.99939 10.7106 8.00001 10.4487 8.00001C10.1866 8.00001 9.76069 8.09817 9.40049 8.49021C9.04009 8.88225 8.02441 9.82998 8.02441 11.7575C8.02441 13.6852 9.43325 15.5479 9.62963 15.8095C9.82621 16.0707 12.3492 20.1527 16.345 21.7231C19.6658 23.0281 20.3417 22.7685 21.0625 22.7033C21.7833 22.638 23.3882 21.7557 23.7159 20.8408C24.0435 19.9261 24.0435 19.1421 23.9453 18.9783C23.8469 18.8149 23.5849 18.7169 23.1917 18.5211C22.7985 18.3252 20.8658 17.3772 20.5054 17.2467C20.145 17.116 19.8829 17.0507 19.6209 17.4429C19.3587 17.8348 18.6057 18.7169 18.3763 18.9783C18.147 19.24 17.9177 19.2727 17.5245 19.0768C17.1314 18.8803 15.8653 18.4669 14.3633 17.1323C13.1946 16.094 12.4055 14.8115 12.1762 14.4193C11.9469 14.0275 12.1516 13.8152 12.3488 13.6199C12.5253 13.4444 12.742 13.1625 12.9386 12.9338C13.1347 12.705 13.2003 12.5417 13.3313 12.2805C13.4623 12.0189 13.3969 11.7901 13.2986 11.5942C13.2003 11.3983 12.4363 9.46081 12.0867 8.68613Z" fill="white"/>
+                                            </svg>
                                     </div>
                                 </a>
-                                <a href="tel:+79215750006" target="blank">
+                                <a class="headerConnection__link" href="tel:+79215750006" target="blank">
                                     <div class="headerConnection__item">
-                                        <img src="./img/mobile.png" alt="">
+                                        <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path class="svg__change"  d="M16 32C24.8365 32 32 24.8365 32 16C32 7.16344 24.8365 0 16 0C7.16344 0 0 7.16344 0 16C0 24.8365 7.16344 32 16 32Z" fill="#61C0BF"/>
+                                            <path d="M7.74756 19.1528C5.6778 17.1907 5.49316 13.8127 7.33516 11.6078" stroke="white" stroke-width="0.752941"/>
+                                            <path d="M8.70717 17.5884C7.49365 16.2712 7.51229 14.1555 8.74881 12.8627" stroke="white" stroke-width="0.752941"/>
+                                            <path d="M20.3136 5.33334H11.5293C10.8363 5.33334 10.2744 5.89518 10.2744 6.58824V25.4118C10.2744 26.1048 10.8363 26.6667 11.5293 26.6667H20.3136C21.0067 26.6667 21.5685 26.1048 21.5685 25.4118V6.58824C21.5685 5.89518 21.0067 5.33334 20.3136 5.33334Z" fill="white"/>
+                                            <path d="M19.7698 7.84311H12.0731C11.7728 7.84311 11.5293 8.08657 11.5293 8.3869V22.3581C11.5293 22.6584 11.7728 22.9019 12.0731 22.9019H19.7698C20.0702 22.9019 20.3136 22.6584 20.3136 22.3581V8.3869C20.3136 8.08657 20.0702 7.84311 19.7698 7.84311Z" fill="#61C0BF"/>
+                                            <path d="M18.85 6.44882H12.9938C12.8783 6.44882 12.7847 6.54246 12.7847 6.65797C12.7847 6.77348 12.8783 6.86712 12.9938 6.86712H18.85C18.9655 6.86712 19.0592 6.77348 19.0592 6.65797C19.0592 6.54246 18.9655 6.44882 18.85 6.44882Z" fill="#61C0BF"/>
+                                            <path d="M15.9214 25.4119C16.2679 25.4119 16.5488 25.1309 16.5488 24.7844C16.5488 24.4379 16.2679 24.157 15.9214 24.157C15.5749 24.157 15.2939 24.4379 15.2939 24.7844C15.2939 25.1309 15.5749 25.4119 15.9214 25.4119Z" fill="#61C0BF"/>
+                                            <path d="M22.8049 12.8627C24.0944 14.2384 24.0247 16.3991 22.6489 17.6887" stroke="white" stroke-width="0.752941"/>
+                                            <path d="M24.2 11.6079C26.212 13.7544 26.1031 17.1256 23.9565 19.1376" stroke="white" stroke-width="0.752941"/>
+                                            </svg>
                                     </div>
                                 </a>
                             </div>
