--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                 </a>
                             </div>
                             <div class="headerConnection__block headerConnection__block--phone">
-                                <a class="headerConnectionItem__link" href="#">+91 967 3466 023</a>
+                                <a class="headerConnectionItem__link headerConnectionItem__phoneNumber" href="#">+91 967 3466 023</a>
                             </div>
                         </div>
                     </div>
@@ -158,8 +158,9 @@
                 <h2 class="our__bouquets">Our bouquets</h2>
                 <div class="bouquets__container">
                     <div class="bouquet__block">
+                        <a class="bouquet_wrapperImg--link" href="./bouquet.html"></a>
                         <div class="bouquet_wrapperImg">
-                            <a class="bouquet_wrapperImg--link" href="./bouquet.html"></a>
+                            
                             <img src="./img/baqet.jpeg" alt="bouquet">
                         </div>
                         <div class="our__bouquets--title">Everything Is Coming Up Roses</div>
@@ -167,7 +168,7 @@
                     </div>
                     <div class="bouquet__block">
                         <div class="bouquet_wrapperImg">
-                            <img src="./img/second.jpeg" alt="bouquet">
+                            <img src="./img/baqet.jpeg" alt="bouquet">
                         </div>
                         <div class="our__bouquets--title">Everything Is Coming Up Roses</div>
                         <div class="our__bouquets--price">$85.00</div>
@@ -181,21 +182,21 @@
                     </div>
                     <div class="bouquet__block">
                         <div class="bouquet_wrapperImg">
-                            <img src="./img/bouquet.jpg" alt="bouquet">
+                            <img src="./img/baqet.jpeg" alt="bouquet">
                         </div>
                         <div class="our__bouquets--title">Everything Is Coming Up Roses</div>
                         <div class="our__bouquets--price">$85.00</div>
                     </div>
                     <div class="bouquet__block">
                         <div class="bouquet_wrapperImg">
-                            <img src="./img/bouquet.jpg" alt="bouquet">
+                            <img src="./img/baqet.jpeg" alt="bouquet">
                         </div>
                         <div class="our__bouquets--title">Everything Is Coming Up Roses</div>
                         <div class="our__bouquets--price">$85.00</div>
                     </div>
                     <div class="bouquet__block">
                         <div class="bouquet_wrapperImg">
-                            <img src="./img/bouquet.jpg" alt="bouquet">
+                            <img src="./img/baqet.jpeg" alt="bouquet">
                         </div>
                         <div class="our__bouquets--title">Everything Is Coming Up Roses</div>
                         <div class="our__bouquets--price">$85.00</div>
@@ -212,7 +213,10 @@
 
     <footer class="footer">
         <div class="container">
+            <div class="footer__text">We do not copy or replicate standard bouquet designs. We consider flower design an art and approach it soulfully. Naturally grown flowers are not industrial products, every flower is unique and subject to season.</div>
             <div class="header__wrapper">
+
+                
                 <div class="header__logo">
                     <img src="./img/newlogo1.png" alt="logo">
                 </div>
@@ -245,7 +249,7 @@
                         </div>
                     </div>
                     <div class="headerConnection__block">
-                        <a class="headerConnectionItem__link" href="#">+91 967 3466 023</a>
+                        <a class="headerConnectionItem__link headerConnectionItem__phoneNumber" href="#">+91 967 3466 023</a>
                     </div>
                 </div>
             </div>
