--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="popUp__cross"></div>
                 <div class="popUp__content">
                     <div class="popUp__TextContent">
-                        <div class="h1">Do you want to order the perfect bouquet?</div>
+                        <div class="h1 popUp__title">Do you want to order the perfect bouquet?</div>
                         <div class="popUp__text">Leave your phone number and our manager will help you pick up your
                             dream
                             bouquet.</div>
@@ -168,7 +168,7 @@
                     </div>
                     <div class="bouquet__block">
                         <div class="bouquet_wrapperImg">
-                            <img src="./img/baqet.jpeg" alt="bouquet">
+                            <img src="./img/bouquet.jpg" alt="bouquet">
                         </div>
                         <div class="our__bouquets--title">Everything Is Coming Up Roses</div>
                         <div class="our__bouquets--price">$85.00</div>
