--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+
+    <div class="popUp__thanks close__thankyou">
+        <div class="thankYou h1">
+            Thank You
+        </div>
+        <div class="connect popUp__text">
+            Our manager will connect to you in closest time
+        </div>
+    </div>
+
     <div class="popUp__container close__popUp">
         <div class="popUp">
             <div class="container">
